* Flint 2.3 (2019-12-XX)

** Supported platforms
   - Windows 7 or later.
   - macOS: OS X Mavericks (10.9) or later.
   - Linux distributions such as Debian 10, Ubuntu 18.04, and RHEL/CentOS 7 & 8.
** Improvements
   - Flint now consists of smaller binaries than the ones of previous releases.
** Bug fixes
   - #3 Fixed crash on macOS when exporting multiple results.

* Flint 2.2 (2019-06-19)

** Supported platforms
   - Windows 7 or later.
   - macOS: OS X Mavericks (10.9) or later.
   - Linux distributions such as Debian 9, Ubuntu 18.04, and RHEL/CentOS 7.
     RHEL/CentOS 6 is no longer supported.
** New features
   - Added an experimental support of the Euler-Maruyama method to solve Itô
     stochastic differential equations.
** Improvements
   - Support MathML's <cn> of type="rational" to represent rational numbers.
   - The executable distributed as the official binary package for macOS
     runs faster than the previous release's.
** Bug fixes
   - Fixed a Gaussian pseudo-random number generation.
   - Using the seed specified in a PHML model for pseudo-random numbers.

* Flint 2.1.1 (2019-02-01)

** Target platforms
   - macOS: OS X Mavericks (10.9) or later.
** Bug fixes
   - Fix crash at launch on macOS.

* Flint 2.1 (2018-10-15)

** Supported platforms
   - Windows 7 or later.
   - macOS: OS X Mavericks (10.9) or later.
   - Linux distributions such as Debian 9, RHEL/CentOS 6, and RHEL/CentOS 7.
** New features
   - Added a window to show and save the gnuplot script plotting line chart.
   - Allow to give a hint of concurrency in the preference window or as
     flint-exec's input.
   - Save configuration into a directory via CTRL+S.
** Improvements
   - Improved thread safety on parameter fitting.
   - Performance optimizations.
** Bug fixes
   - Fix unexpected hangs.

* Flint 2.0 (2018-04-09)

** Supported platforms
   - Windows: Windows 7, 8, and 10.
   - macOS: OS X Mavericks (10.9) or later.