@@ -8,6 +8,7 @@
    - Flint now consists of smaller binaries than the ones of previous releases.
 ** Bug fixes
    - #3 Fixed crash on macOS when exporting multiple results.
+   - #4 Fixed frame shrinkage of Preference window on GTK 3.
 
 * Flint 2.2 (2019-06-19)
 
